--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,9 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
+body {
+    font-family:Arial, Helvetica, sans-serif;
+}
+
 .card {
     min-height: 116px !important;
 }
