--- a/styles/global.css
+++ b/styles/global.css
@@ -4,9 +4,22 @@ body {
     font-family:Arial, Helvetica, sans-serif;
 }
 
-.card {
-    min-height: 116px !important;
+@media (min-width: 992px) {
+    .card {
+        min-height: 116px;
+    }
 }
+
+@media (max-width: 992px) {
+    .card {
+        /* max-height: 85px; */
+        margin-bottom: 10px;
+    }
+}
+
+/* .card {
+    min-height: 116px;
+} */
 
 .card:hover, a {
     text-decoration: none;
