--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,11 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
 body {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+
+/* Cards */
 @media (min-width: 992px) {
     .card {
         min-height: 116px;
@@ -16,10 +18,6 @@ body {
         margin-bottom: 10px;
     }
 }
-
-/* .card {
-    min-height: 116px;
-} */
 
 .card:hover, a {
     text-decoration: none;
@@ -40,4 +38,8 @@ body {
     position: fixed;
     bottom: 15px;
     right: 15px;
+}
+
+.lil-p {
+    font-size: 7pt;
 }
