--- a/styles/guides.css
+++ b/styles/guides.css
@@ -1,3 +1,6 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
+
 /* .container {
     max-width: 40%;
 } */
@@ -24,4 +27,23 @@ li, img {
 
 b {
     color: skyblue;
+}
+
+
+/* note */
+.note {
+    background-color: #0d6efd;
+    padding: 0.75rem;
+    border-radius: 1rem;
+
+    margin: 1rem;
+}
+.note p {
+    margin: 0;
+}
+.note h3 {
+    color: white;
+}
+.note b {
+    color: rgb(255, 145, 0);
 }
