--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,17 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
+
+@media (max-width: 2106px) {
+    body {
+        font-size: 8pt;
+    }
+    .container {
+        max-width: 80%;
+    }
+}
+
+
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -10,6 +22,8 @@ body {
     .card {
         min-height: 116px;
     }
+
+    
 }
 
 @media (max-width: 992px) {
@@ -17,7 +31,16 @@ body {
         /* max-height: 85px; */
         margin-bottom: 10px;
     }
+
+    /* body {
+        font-size: 8pt;
+    }
+    .container {
+        max-width: 65%;
+    } */
 }
+
+
 
 .card:hover, a {
     text-decoration: none;
