--- a/styles/guides.css
+++ b/styles/guides.css
@@ -5,6 +5,11 @@
     max-width: 40%;
 } */
 
+/* @media (max-width: 3274px) {
+    
+
+} */
+
 .body-container h2, .body-container h3, .body-container h4 {
     font-weight: 700;
 }
