--- a/styles/global.css
+++ b/styles/global.css
@@ -1,20 +1,32 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 15%;
+    margin-right: 15%;
+}
 
-@media (max-width: 2106px) {
+@media (max-width: 3273px) {
     body {
         font-size: 8pt;
     }
-    .container {
-        max-width: 80%;
+
+    .lil-p {
+        font-size: 4pt;
+    }
+}
+
+@media (min-width: 1733px) {
+    body {
+        font-size: 14pt;
+    }
+    
+    .lil-p {
+        font-size: 7pt;
     }
 }
 
 
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 
 /* Cards */
@@ -22,8 +34,6 @@ body {
     .card {
         min-height: 116px;
     }
-
-    
 }
 
 @media (max-width: 992px) {
@@ -32,15 +42,10 @@ body {
         margin-bottom: 10px;
     }
 
-    /* body {
+    body {
         font-size: 8pt;
     }
-    .container {
-        max-width: 65%;
-    } */
 }
-
-
 
 .card:hover, a {
     text-decoration: none;
@@ -63,9 +68,9 @@ body {
     right: 15px;
 }
 
-.lil-p {
+/* .lil-p {
     font-size: 7pt;
-}
+} */
 
 .click-here {
     color: skyblue;
